# Advent-of-Code-2021

./: .gitignore
01-first/src/: main.rs
02-second/: Cargo.toml
03-third/src/: main.rs
05-fifth/: Cargo.toml
05-fifth/src/: fifth.rs
06-sixth/benches/: benchmark.rs
06-sixth/src/: lib.rs
07-seventh/benches/: benchmark.rs
07-seventh/src/: seventh.rs
08-eighth/src/: eighth.rs  lib.rs  main.rs
09-ninth/: Cargo.toml
09-ninth/benches/: benchmark.rs
09-ninth/src/: main.rs  ninth.rs
10-tenth/: Cargo.toml
10-tenth/benches/: benchmark.rs
10-tenth/src/: lib.rs  main.rs  tenth.rs
11-eleventh/: Cargo.toml
11-eleventh/benches/: benchmark.rs
11-eleventh/src/: eleventh.rs  lib.rs  main.rs
12-twelfth/: Cargo.toml
12-twelfth/benches/: benchmark.rs
12-twelfth/src/: lib.rs  main.rs  twelfth.rs
13-thirteenth/: Cargo.toml  file
13-thirteenth/src/: lib.rs  main.rs  thirteenth.rs
14-fourteenth/: Cargo.toml
14-fourteenth/benches/: benchmark.rs
14-fourteenth/src/: fourteenth.rs  lib.rs  main.rs
15-fifteenth/: Cargo.toml
15-fifteenth/benches/: benchmark.rs
15-fifteenth/src/: fifteenth.rs  lib.rs  main.rs
16-sixteenth/: Cargo.toml
16-sixteenth/benches/: benchmark.rs
16-sixteenth/src/: lib.rs  main.rs  sixteen.rs
17-seventeenth/: Cargo.toml
17-seventeenth/src/: lib.rs  main.rs  seventeen.rs
18-eighteenth/: Cargo.toml
18-eighteenth/benches/: benchmark.rs
18-eighteenth/desparate/: main.py
18-eighteenth/src/: eighteen.rs  lib.rs  main.rs  temp.py
19-nineteen/: Cargo.toml
19-nineteen/python/: main.py
19-nineteen/src/: lib.rs  main.rs  nineteen.rs  temp2.py
20-twentieth/: Cargo.toml
20-twentieth/src/: lib.rs  main.rs  twentieth.rs
21-twentiefirst/: Cargo.toml  part1.numbers
21-twentiefirst/src/: lib.rs  main.rs  twentiefirst.rs
22-twentiesecond/: Cargo.toml
22-twentiesecond/src/: lib.rs  main.rs  part2.py  twentiesecond.rs
23-twentiethird/: solution.numbers
24-twentiefourth/: Cargo.toml  temp.py
24-twentiefourth/src/: lib.rs  main.rs  src.cpp  twentiefourth.rs
25-twentiefifth/: Cargo.toml
25-twentiefifth/benches/: benchmark.rs
25-twentiefifth/src/: lib.rs  main.rs  twentiefifth.rs
eighth/: Cargo.toml
eighth/benches/: benchmark.rs
fifth/: Cargo.toml
fifth/benches/: benchmark.rs
fifth/src/: lib.rs  main.rs
ninth/src/: lib.rs  (+2 more)
seventh/: Cargo.toml
sixth/: Cargo.toml
(+8 files in other folders)
