[package]
name = "twelfth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"

[dev-dependencies]
criterion = "0.3"

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "benchmark"
harness = false