[package]
name = "eighteen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "benchmark"
harness = false